--- a/src/index.css
+++ b/src/index.css
@@ -283,5 +283,113 @@ video {
   padding-left: 0px;
   padding-right: 0px;
   border-radius: 15px;
-  filter: sepia(100%);
+  filter: sepia(400%);
+}
+
+.saturate {
+  margin-top: 5px;
+  border-style: dashed;
+  border-color: black;
+  background-color: gray;
+  align-items: center;
+  margin-left: 0px;
+  margin-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
+  border-radius: 15px;
+  filter: saturate(800%);
+}
+
+.contrast {
+  margin-top: 5px;
+  border-style: dashed;
+  border-color: black;
+  background-color: gray;
+  align-items: center;
+  margin-left: 0px;
+  margin-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
+  border-radius: 15px;
+  filter: contrast(500%);
+}
+
+#shutter {
+  border-radius: 50px;
+  border-color: black;
+  background: gray;
+  border-style: double;
+  position: relative;
+  transition: 0.5s ease;
+  top: 0px;
+  left: 0px;
+  bottom: 3000px;
+  right: 500px;
+  height: 500px;
+  width: 200px;
+}
+
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  /* background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.7); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  /* text-align: center; */
+  border: 4px solid #888;
+  width: 30%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.flash {
+  background: white;
+  filter: brightness(10000%);
+}
+
+.modal2 {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  /* background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0); /* Black w/ opacity */
+}
+
+.modal-content2 {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  /* text-align: center; */
+  border: 4px solid #888;
+  width: 30%; /* Could be more or less, depending on screen size */
 }
