--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background-image: url("https://wallpaperplay.com/walls/full/9/4/2/202835.jpg"); */
   background-color: #ef5350;
+  /* background-color: #62727b; */
 }
 
 code {
@@ -31,6 +32,7 @@ code {
 
 .sidebar {
   background-color: #b61827;
+  /* background-color: #37474f; */
   width: 25%;
   height: 750px;
   opacity: 1;
@@ -176,10 +178,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
 }
 
@@ -194,10 +195,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: grayscale();
 }
@@ -208,10 +208,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: invert(100%);
 }
@@ -222,10 +221,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: blur(5px);
 }
@@ -236,10 +234,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: brightness(200%) blur(2px);
 }
@@ -250,10 +247,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: saturate(8px);
 }
@@ -264,10 +260,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: hue-rotate(90deg);
 }
@@ -278,10 +273,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: sepia(400%);
 }
@@ -292,10 +286,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: saturate(800%);
 }
@@ -306,10 +299,9 @@ video {
   border-color: black;
   background-color: gray;
   align-items: center;
-  margin-left: 0px;
-  margin-right: 20px;
-  padding-left: 0px;
-  padding-right: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+
   border-radius: 15px;
   filter: contrast(500%);
 }
@@ -373,23 +365,84 @@ video {
 }
 
 .modal2 {
-  display: block; /* Hidden by default */
+  display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  /* background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
+/* Modal Content */
 .modal-content2 {
+  position: relative;
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  /* text-align: center; */
-  border: 4px solid #888;
-  width: 30%; /* Could be more or less, depending on screen size */
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+/* The Close Button */
+/* .close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+} */
+
+/* .close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+} */
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #b61827;
+  color: white;
+}
+
+.modal-body {
+  padding: 2px 16px;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #b61827;
+  color: white;
 }
