--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
   /* background-image: url("https://wallpaperplay.com/walls/full/9/4/2/202835.jpg"); */
   background-color: #ef5350;
   /* background-color: #62727b; */
+  /* animation-name: example;
+  animation-duration: 14s;
+  animation-iteration-count: 3; */
 }
 
 code {
@@ -393,6 +396,20 @@ video {
   animation-duration: 0.4s;
 }
 
+/* .modal-content3 {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+} */
+
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {
@@ -445,4 +462,82 @@ video {
   padding: 2px 16px;
   background-color: #b61827;
   color: white;
+}
+
+.modal-header2 {
+  padding: 2px 16px;
+  background-color: #b61827;
+  color: white;
+}
+
+.modal-body2 {
+  padding: 2px 16px;
+}
+
+.modal-footer2 {
+  padding: 2px 16px;
+  background-color: #b61827;
+  color: white;
+}
+
+.modal3 {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.buttons2 {
+  color: #fff !important;
+  text-transform: uppercase;
+  background: #ed3330;
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  border: none;
+  margin: 10px;
+}
+
+.textfield2 {
+  border-radius: 5px;
+  border-style: double;
+  border-color: #fff;
+  height: 45px;
+}
+
+.library {
+  border-radius: 15px;
+  border-style: outset;
+  border-color: gray;
+  margin: 10px;
+  width: 230px;
+  height: 174px;
+}
+
+@keyframes example {
+  0% {
+    background-color: red;
+  }
+  20% {
+    background-color: yellow;
+  }
+  40% {
+    background-color: blue;
+  }
+  60% {
+    background-color: green;
+  }
+  80% {
+    background-color: purple;
+  }
+  100% {
+    background-color: red;
+  }
 }
