--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-image: url("https://wallpaperplay.com/walls/full/9/4/2/202835.jpg"); */
-  background-color: #ef5350;
+  /* background-color: #ef5350; */
+  background-color: #efefef;
   /* background-color: #62727b; */
   /* animation-name: example;
   animation-duration: 14s;
@@ -37,12 +38,13 @@ code {
 }
 
 .sidebar {
-  background-color: #b61827;
+  /* background-color: #b61827; */
+  background-color: #f2f2f2;
   /* background-color: #37474f; */
   width: 30%;
   height: 100%;
   opacity: 1;
-  color: white;
+  color: #302f2f;
   overflow-y: scroll;
   padding: 0px;
   margin: 0px;
@@ -165,30 +167,63 @@ code {
   padding: 25px;
 }
 
+/* .local-media:before {
+  content: url(camera.png);
+  position: absolute;
+  border-radius: 5px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 150px;
+  width: 200px;
+  top: 500px;
+  left: 650px;
+} */
+
+.camclick {
+  position: absolute;
+  left: 50%;
+  top: 80%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  color: white;
+  z-index: 1;
+  filter: invert(65%);
+  opacity: 60%;
+  pointer-events: none;
+}
+
 video {
   margin-left: 15px;
   border-radius: 15px;
 }
 
 .smallcam {
+  position: static;
   width: 202px;
   height: 151px;
   margin-right: 30px;
   filter: inherit;
+  box-sizing: border-box;
+}
+
+.active {
+  border-width: 7px;
 }
 .smallcam:hover {
-  box-shadow: 5px 10px #ffcc00;
+  /* box-shadow: 5px 10px #ffcc00; */
+  border-width: 7px;
 }
 
 .none {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
   margin-left: 10px;
   margin-right: 10px;
-
   border-radius: 15px;
 }
 
@@ -199,7 +234,7 @@ video {
 
 .gray {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
@@ -212,8 +247,8 @@ video {
 
 .invert {
   margin-top: 5px;
-  border-style: dashed;
-  border-color: black;
+  border-style: solid;
+  border-color: white;
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -223,9 +258,18 @@ video {
   filter: invert(100%);
 }
 
+.testdiv {
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  color: white;
+}
+
 .blur {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
@@ -238,7 +282,7 @@ video {
 
 .angel {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
@@ -251,7 +295,7 @@ video {
 
 .toon {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
@@ -264,7 +308,7 @@ video {
 
 .bizzaro {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
@@ -277,7 +321,7 @@ video {
 
 .sepia {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
@@ -290,7 +334,7 @@ video {
 
 .saturate {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
@@ -303,7 +347,7 @@ video {
 
 .contrast {
   margin-top: 5px;
-  border-style: dashed;
+  border-style: solid;
   border-color: black;
   background-color: gray;
   align-items: center;
