--- a/src/index.css
+++ b/src/index.css
@@ -26,21 +26,42 @@ code {
 }
 
 .app {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-auto-rows: 1fr;
+
+  /* display: flex;
   flex-direction: row;
   width: 100%;
   height: 750px;
   padding: 0px;
   margin: 0px;
-  /* border-color: black;
-  border-style: double; */
-  height: 100vh;
+  height: 100vh; */
 }
 
-.sidebar {
-  /* background-color: #b61827; */
+.sidebarContainer {
+  margin-left: 5px;
+  grid-column: 1;
+}
+
+.cameraContainer {
+  grid-column: 2;
+}
+
+.smallcam {
+  position: static;
+  width: 202px;
+  height: 151px;
+  margin-right: 30px;
+  filter: inherit;
+  border-color: black;
+  border-width: 2px;
+}
+
+/* CSS for older variant */
+
+/* .sidebar {
   background-color: #d1d1d1;
-  /* background-color: #37474f; */
   width: 30%;
   height: 100%;
   opacity: 1;
@@ -48,30 +69,25 @@ code {
   overflow-y: scroll;
   padding: 0px;
   margin: 0px;
-}
+} */
 
-.logo {
+/* .logo {
   height: auto;
   width: 85%;
-  /* border-style: double; */
-  /* border-color: white; */
   margin-top: 5px;
   padding-left: 5px;
   padding-right: 5px;
   border-bottom-style: inset;
-}
+} */
 
-.avatar {
+/* .avatar {
   width: 50px;
   height: 50px;
-  /* border-style: ridge;
-  border-color: white; */
   margin: 5px;
 }
 
 .userInfo {
   display: flex;
-
   border-style: inset;
   width: 88%;
   height: 65px;
@@ -80,7 +96,6 @@ code {
 
 .userText {
   display: flex;
-  /* border-top-style: inset; */
   width: 88%;
   flex-direction: row;
   justify-content: space-evenly;
@@ -93,7 +108,6 @@ code {
 
 .recentCon {
   display: flex;
-  /* border-style: inset; */
   height: 70px;
   width: 88%;
   max-width: 265px;
@@ -103,7 +117,6 @@ code {
 
 .convoCon {
   display: flex;
-  /* border-style: inset; */
   height: 100px;
   width: 88%;
   flex-direction: column;
@@ -135,13 +148,9 @@ code {
   font-family: "Staatliches";
   display: flex;
   wrap: wrap;
-}
+} */
 
-194 * {
-  font-family: Roboto;
-}
-
-.textfield {
+/* .textfield {
   border-color: #3f51b5;
   border-left-style: solid;
   border-right-style: none;
@@ -164,29 +173,13 @@ code {
   display: flex;
   border-color: white;
   padding: 25px;
-}
-
-/* .local-media:before {
-  content: url(camera.png);
-  position: absolute;
-  border-radius: 5px;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 150px;
-  width: 200px;
-  top: 500px;
-  left: 650px;
 } */
 
-.camclick {
+/* .camclick {
   position: absolute;
   left: 50%;
   top: 80%;
   transform: translate(-50%, -50%);
-  /* font-size: 20px; */
-  /* color: white; */
   z-index: 1;
   filter: invert(50%);
   opacity: 60%;
@@ -201,12 +194,9 @@ code {
   font-size: 250px;
   color: white;
   z-index: 2;
-  /* filter: invert(65%); */
   opacity: 60%;
   pointer-events: none;
-  /* font-family: "Indie Flower", cursive; */
   font-family: "Dancing Script", cursive;
-  /* font-family: "Permanent Marker", cursive; */
   text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
 
@@ -215,11 +205,6 @@ code {
     both;
   animation: scale-in-center 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3 both;
 }
-/* #countdownback {
-  font-size: 270px;
-  color: black;
-  z-index: 1;
-} */
 
 video {
   margin-left: 15px;
@@ -234,59 +219,37 @@ video {
   filter: inherit;
   border-color: black;
   border-width: 2px;
-  /* box-sizing: border-box; */
-  /* background-color: #fff;
-  box-shadow: 120px 80px 40px 20px #0ff; */
+
 }
 
-.active {
-  /* border-style: double; */
-  /* border-color: red; */
-}
 
 .camBox:hover {
-  /* background-color: #fff; */
-  /* box-shadow: 120px 80px 40px 20px #0ff; */
   border-color: purple;
   border-width: 5px;
-}
-.smallcam:hover {
-  /* box-shadow: 5px 10px #ffcc00; */
-  /* border-color: black; */
-  /* background-color: #fff; */
-  /* box-shadow: 120px 80px 40px 20px #0ff; */
-  /* border-width: 2px; */
 }
 
 .none {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
   margin-right: 10px;
   border-radius: 15px;
-  /* transform: rotate(20deg); */
 }
 
 #mainvid {
   height: 648px;
   width: 864px;
-  /* height: device-width */
   border-radius: 0px;
   border-width: 20px;
   border-bottom-width: 40px;
-  /* box-sizing: border-box; */
   border-color: white;
 }
 
 .gray {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -322,8 +285,6 @@ video {
 .blur {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -336,8 +297,6 @@ video {
 .angel {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -350,8 +309,6 @@ video {
 .toon {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -364,8 +321,6 @@ video {
 .bizzaro {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black; */
-  /* border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -378,8 +333,6 @@ video {
 .sepia {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -392,8 +345,6 @@ video {
 .saturate {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -406,8 +357,6 @@ video {
 .contrast {
   margin-top: 5px;
   border-style: solid;
-  /* border-color: black;
-  border-width: 2px; */
   background-color: gray;
   align-items: center;
   margin-left: 10px;
@@ -433,29 +382,26 @@ video {
 }
 
 .modal {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
+  display: block;
+  position: fixed;
+  z-index: 2;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  /* background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.7); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
-/* Modal Content/Box */
+
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 20px;
-  /* text-align: center; */
   border: 4px solid #888;
-  width: 30%; /* Could be more or less, depending on screen size */
+  width: 30%;
 }
 
-/* The Close Button */
 .close {
   color: #aaa;
   float: right;
@@ -476,20 +422,20 @@ video {
 }
 
 .modal2 {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 2;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Modal Content */
+
 .modal-content2 {
   position: relative;
   background-color: #fefefe;
@@ -502,7 +448,7 @@ video {
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
-}
+} */
 
 /* .modal-content3 {
   position: relative;
@@ -519,7 +465,7 @@ video {
 } */
 
 /* Add Animation */
-@-webkit-keyframes animatetop {
+/* @-webkit-keyframes animatetop {
   from {
     top: -300px;
     opacity: 0;
@@ -539,7 +485,7 @@ video {
     top: 0;
     opacity: 1;
   }
-}
+} */
 
 /* The Close Button */
 /* .close {
@@ -556,7 +502,7 @@ video {
   cursor: pointer;
 } */
 
-.modal-header {
+/* .modal-header {
   padding: 2px 16px;
   background-color: #b61827;
   color: white;
@@ -586,23 +532,23 @@ video {
   padding: 2px 16px;
   background-color: #b61827;
   color: white;
-}
+} */
 
-.modal3 {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+/* .modal3 {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  /* background-color: rgb(0, 0, 0); /* Fallback color */
-  */background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  */
+/* background-color: rgba(0, 0, 0, 0.4);
+} */
 
-.buttons2 {
+/* .buttons2 {
   color: #fff !important;
   text-transform: uppercase;
   background: #ed3330;
@@ -627,22 +573,19 @@ video {
   margin: 10px;
   width: 230px;
   height: 174px;
-}
+}  */
 
-#myCanvasa {
+/* #myCanvasa {
   border-radius: 0px;
-  /* margin-top: 10px; */
   transform: rotate(-15deg);
   border-color: white;
   border-width: 20px;
   border-style: solid;
   box-sizing: border-box;
-  /* border-bottom-width: 30px; */
 }
 
 #myCanvasb {
   border-radius: 0px;
-  /* margin-top: 10px; */
   transform: rotate(15deg);
   border-color: white;
   border-width: 20px;
@@ -652,7 +595,6 @@ video {
 
 #myCanvasc {
   border-radius: 0px;
-  /* margin-top: 10px; */
   transform: rotate(-15deg);
   border-color: white;
   border-width: 20px;
@@ -662,7 +604,6 @@ video {
 
 #myCanvasd {
   border-radius: 0px;
-  /* margin-top: 10px; */
   transform: rotate(15deg);
   border-color: white;
   border-width: 20px;
@@ -714,4 +655,4 @@ video {
     transform: scale(1);
     opacity: 1;
   }
-}
+} */
